// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AlphaTexLexerTest basic-tokens 1`] = `
Array [
  Dot (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 2`] = `
Array [
  Colon (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 3`] = `
Array [
  LParen (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 4`] = `
Array [
  RParen (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 5`] = `
Array [
  LBrace (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 6`] = `
Array [
  RBrace (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 7`] = `
Array [
  Pipe (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest basic-tokens 8`] = `
Array [
  Asterisk (1,1) -> (1,1),
]
`;

exports[`AlphaTexLexerTest errors at001 1`] = `
Array [
  Ident "a" (1,2) -> (1,3),
]
`;

exports[`AlphaTexLexerTest errors at001 2`] = `
Array [
  Map {
    "code" => 1,
    "severity" => 2,
    "message" => "Unexpected character at comment start, expected '//' or '/*' but found '/a'",
    "start" => Map {
      "col" => 2,
      "line" => 1,
      "offset" => 1,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at002 1`] = `
Array [
  String "Test" (1,3) -> (1,8),
]
`;

exports[`AlphaTexLexerTest errors at002 2`] = `
Array [
  Map {
    "code" => 2,
    "severity" => 2,
    "message" => "Missing identifier after meta data start",
    "start" => Map {
      "col" => 2,
      "line" => 1,
      "offset" => 1,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at003 1`] = `Array []`;

exports[`AlphaTexLexerTest errors at003 2`] = `
Array [
  Map {
    "code" => 3,
    "severity" => 2,
    "message" => "Unexpected end of file. Need 4 hex characters on a \\\\uXXXX escape sequence",
    "start" => Map {
      "col" => 7,
      "line" => 1,
      "offset" => 6,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at004 1`] = `
Array [
  Ident "X" (1,7) -> (1,8),
]
`;

exports[`AlphaTexLexerTest errors at004 2`] = `
Array [
  Map {
    "code" => 4,
    "severity" => 2,
    "message" => "Invalid unicode value. Need 4 hex characters on a \\\\uXXXX escape sequence.",
    "start" => Map {
      "col" => 7,
      "line" => 1,
      "offset" => 6,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at005 1`] = `
Array [
  Ident "b01010101" (1,3) -> (1,12),
]
`;

exports[`AlphaTexLexerTest errors at005 2`] = `
Array [
  Map {
    "code" => 5,
    "severity" => 2,
    "message" => "Unsupported escape sequence. Expected '\\\\n', '\\\\r', '\\\\t', or '\\\\uXXXX' but found '\\\\b'.",
    "start" => Map {
      "col" => 3,
      "line" => 1,
      "offset" => 2,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at006 1`] = `Array []`;

exports[`AlphaTexLexerTest errors at006 2`] = `
Array [
  Map {
    "code" => 6,
    "severity" => 2,
    "message" => "Unexpected end of file. String not closed.",
    "start" => Map {
      "col" => 8,
      "line" => 1,
      "offset" => 7,
    },
  },
]
`;

exports[`AlphaTexLexerTest errors at006 3`] = `Array []`;

exports[`AlphaTexLexerTest errors at006 4`] = `
Array [
  Map {
    "code" => 6,
    "severity" => 2,
    "message" => "Unexpected end of file. String not closed.",
    "start" => Map {
      "col" => 8,
      "line" => 1,
      "offset" => 7,
    },
  },
]
`;

exports[`AlphaTexLexerTest floats 1`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
]
`;

exports[`AlphaTexLexerTest floats 2`] = `
Array [
  Number "11.22" (1,1) -> (1,6),
  Number "33.44" (1,7) -> (1,12),
]
`;

exports[`AlphaTexLexerTest floats 3`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  Dot (1,4) -> (1,4),
  Number "4" (1,5) -> (1,6),
]
`;

exports[`AlphaTexLexerTest floats 4`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  Dot (1,5) -> (1,5),
  Number "4" (1,6) -> (1,7),
]
`;

exports[`AlphaTexLexerTest floats 5`] = `
Array [
  Number "1" (1,1) -> (1,2),
  Dot (1,3) -> (1,3),
  Number "1.4" (1,4) -> (1,7),
]
`;

exports[`AlphaTexLexerTest floats 6`] = `
Array [
  Number "-1.1" (1,1) -> (1,5),
]
`;

exports[`AlphaTexLexerTest floats 7`] = `
Array [
  Ident "-" (1,1) -> (1,2),
  Dot (1,2) -> (1,2),
  Number "1" (1,3) -> (1,4),
]
`;

exports[`AlphaTexLexerTest floats 8`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  LParen (1,4) -> (1,4),
]
`;

exports[`AlphaTexLexerTest floats 9`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  LBrace (1,4) -> (1,4),
]
`;

exports[`AlphaTexLexerTest floats 10`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  Pipe (1,4) -> (1,4),
]
`;

exports[`AlphaTexLexerTest floats 11`] = `
Array [
  Number "1" (1,1) -> (1,2),
  Dot (1,2) -> (1,2),
  Ident "1a" (1,3) -> (1,5),
]
`;

exports[`AlphaTexLexerTest floats 12`] = `
Array [
  Ident "1a" (1,1) -> (1,3),
  Dot (1,3) -> (1,3),
  Number "1" (1,4) -> (1,5),
]
`;

exports[`AlphaTexLexerTest floats 13`] = `
Array [
  Number "1.1" (1,1) -> (1,4),
  Tag "test" (1,4) -> (1,9) {
    prefix: Backslash (1,4) -> (1,5),
    tag: Ident "test" (1,5) -> (1,9),
  },
]
`;

exports[`AlphaTexLexerTest identifiers 1`] = `
Array [
  Ident "true" (1,1) -> (1,5),
]
`;

exports[`AlphaTexLexerTest identifiers 2`] = `
Array [
  Ident "false" (1,1) -> (1,6),
]
`;

exports[`AlphaTexLexerTest identifiers 3`] = `
Array [
  Ident "HelloWorld" (1,1) -> (1,11),
]
`;

exports[`AlphaTexLexerTest identifiers 4`] = `
Array [
  Ident "C4" (1,1) -> (1,3),
]
`;

exports[`AlphaTexLexerTest identifiers 5`] = `
Array [
  Ident "C#4" (1,1) -> (1,4),
]
`;

exports[`AlphaTexLexerTest identifiers 6`] = `
Array [
  Ident "Cb4" (1,1) -> (1,4),
]
`;

exports[`AlphaTexLexerTest identifiers 7`] = `
Array [
  Ident "electricpiano1" (1,1) -> (1,15),
]
`;

exports[`AlphaTexLexerTest identifiers 8`] = `
Array [
  Ident "Unicodeöäü" (1,1) -> (1,11),
  Ident "Unicode😸" (1,12) -> (1,20),
  Ident "Utf16🤘🏻" (1,21) -> (1,28),
]
`;

exports[`AlphaTexLexerTest identifiers 9`] = `
Array [
  Ident "dashed-identifier" (1,1) -> (1,18),
]
`;

exports[`AlphaTexLexerTest leading-comments 1`] = `
Array [
  Ident "true" (2,10) -> (3,1) {
    leadingComments: Array [
      "// Single",
    ],
  },
  Ident "false" (6,10) -> (7,1) {
    leadingComments: Array [
      "/** Multi **/",
      "/** Multi2 **/",
      "// Single",
    ],
  },
]
`;

exports[`AlphaTexLexerTest meta-command 1`] = `
Array [
  Tag "title" (1,1) -> (1,7) {
    prefix: Backslash (1,1) -> (1,2),
    tag: Ident "title" (1,2) -> (1,7),
  },
]
`;

exports[`AlphaTexLexerTest meta-command 2`] = `
Array [
  Tag "double" (1,1) -> (1,9) {
    prefix: DoubleBackslash (1,1) -> (1,3),
    tag: Ident "double" (1,3) -> (1,9),
  },
]
`;

exports[`AlphaTexLexerTest meta-command 3`] = `
Array [
  Tag "withNumber123" (1,1) -> (1,15) {
    prefix: Backslash (1,1) -> (1,2),
    tag: Ident "withNumber123" (1,2) -> (1,15),
  },
]
`;

exports[`AlphaTexLexerTest meta-command 4`] = `
Array [
  Tag "withUnicode😼" (1,1) -> (1,14) {
    prefix: Backslash (1,1) -> (1,2),
    tag: Ident "withUnicode😼" (1,2) -> (1,14),
  },
]
`;

exports[`AlphaTexLexerTest meta-command 5`] = `
Array [
  Tag "withUnicode😼" (1,1) -> (1,14) {
    prefix: Backslash (1,1) -> (1,2),
    tag: Ident "withUnicode😼" (1,2) -> (1,14),
  },
  Dot (1,15) -> (1,15),
  Tag "withNumber123" (1,17) -> (1,31) {
    prefix: Backslash (1,17) -> (1,18),
    tag: Ident "withNumber123" (1,18) -> (1,31),
  },
]
`;

exports[`AlphaTexLexerTest numbers 1`] = `
Array [
  Number "1" (1,1) -> (1,2),
]
`;

exports[`AlphaTexLexerTest numbers 2`] = `
Array [
  Number "1234" (1,1) -> (1,5),
]
`;

exports[`AlphaTexLexerTest numbers 3`] = `
Array [
  Number "-1" (1,1) -> (1,3),
]
`;

exports[`AlphaTexLexerTest numbers 4`] = `
Array [
  Number "-1234" (1,1) -> (1,6),
]
`;

exports[`AlphaTexLexerTest numbers 5`] = `
Array [
  Number "1234" (1,1) -> (1,5),
  Number "5678" (1,6) -> (1,10),
]
`;

exports[`AlphaTexLexerTest strings 1`] = `
Array [
  String "Double Quoted" (1,1) -> (1,15),
]
`;

exports[`AlphaTexLexerTest strings 2`] = `
Array [
  String "Single Quoted" (1,1) -> (1,15),
]
`;

exports[`AlphaTexLexerTest strings 3`] = `
Array [
  String "Multiple" (1,1) -> (1,10),
  String "Strings" (1,12) -> (1,20),
]
`;

exports[`AlphaTexLexerTest strings 4`] = `
Array [
  String "Double \\"Quoted\\"" (1,1) -> (1,19),
]
`;

exports[`AlphaTexLexerTest strings 5`] = `
Array [
  String "Single 'Quoted'" (1,1) -> (1,19),
]
`;

exports[`AlphaTexLexerTest strings 6`] = `
Array [
  String "\\r\\n\\t" (1,1) -> (1,8),
]
`;

exports[`AlphaTexLexerTest strings 7`] = `
Array [
  String "\\r\\n\\t" (1,1) -> (1,8),
]
`;

exports[`AlphaTexLexerTest strings 8`] = `
Array [
  String "😸" (1,1) -> (1,14),
]
`;

exports[`AlphaTexLexerTest strings 9`] = `
Array [
  String "😸🤘🏻" (1,1) -> (1,5),
]
`;

exports[`AlphaTexLexerTest trailing-comments 1`] = `
Array [
  Ident "true" (1,10) -> (1,14) {
    trailingComments: Array [
      "// Single After",
    ],
  },
  Ident "false" (2,10) -> (2,15) {
    trailingComments: Array [
      "/** Multi After **/",
    ],
  },
  Ident "true" (3,23) -> (3,27) {
    leadingComments: Array [
      "/** before **/",
    ],
    trailingComments: Array [
      "/** middle **/",
    ],
  },
  Ident "false" (3,41) -> (3,46) {
    trailingComments: Array [
      "// after",
    ],
  },
]
`;

exports[`AlphaTexLexerTest whitespace 1`] = `
Array [
  Dot (1,3) -> (1,3),
  Dot (2,8) -> (2,8),
]
`;
